--- a/src/main/resources/Fxml/Client/Client.fxml
+++ b/src/main/resources/Fxml/Client/Client.fxml
@@ -6,9 +6,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.mazebank.Controllers.client.ClientController"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml">
 
-</AnchorPane>
+    <left>
+        <fx:include source="ClientMenu.fxml" />
+    </left>
+
+    <center>
+        <fx:include source="Dashboard.fxml" />
+    </center>
+
+</BorderPane>
