--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -43,7 +43,7 @@
       <TextField fx:id="payee_address_fld" styleClass="input_field"/>
       <Label fx:id="password_lbl" text="Password"/>
       <TextField fx:id="password_fld" styleClass="input_field"/>
-      <Button mnemonicParsing="false" text="Button"/>
-      <Label fx:id="error_lbl" styleClass="error_label" text="Error"/>
+      <Button fx:id="login_btn" mnemonicParsing="false" text="Login"/>
+      <Label fx:id="error_lbl" styleClass="error_label"/>
    </VBox>
 </AnchorPane>
