--- a/src/main/resources/Fxml/Client/Accounts.fxml
+++ b/src/main/resources/Fxml/Client/Accounts.fxml
@@ -1,39 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="account_view_container" stylesheets="@../../Styles/Accounts.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.client.AccountsController">
-   <children>
-      <Text layoutX="26.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Checking Account" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
-      <VBox prefHeight="300.0" prefWidth="450.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="40.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Account Number" />
-            <Label text="4325 6789" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction Limit:" />
-            <Label text="Label" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date Created:" />
-            <Label text="2023-12-25" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Balance" />
-            <Label text="\$3 000.00" />
-         </children>
-      </VBox>
-      <Text layoutX="14.0" layoutY="379.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Saving Account" />
-      <VBox layoutX="21.0" layoutY="398.0" prefHeight="300.0" prefWidth="450.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="14.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Account Number" />
-            <Label text="4325 6098" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Withdrawal Limit:" />
-            <Label text="\$ 10 000.00" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date Created:" />
-            <Label text="2023-7-07" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Balance" />
-            <Label text="\$10 500.00" />
-         </children>
-      </VBox>
-      <Text layoutX="467.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Move Funds To Savings Account" />
-      <TextField layoutX="573.0" layoutY="40.0" prefHeight="26.0" prefWidth="221.0" AnchorPane.rightAnchor="164.0" AnchorPane.topAnchor="72.0" />
-      <Button layoutX="617.0" layoutY="110.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="222.0" text="Button" AnchorPane.rightAnchor="164.0" AnchorPane.topAnchor="123.0" />
-   </children>
+<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="account_view_container"
+            stylesheets="@../../Styles/Accounts.css" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.mazebank.Controllers.client.AccountsController">
+   <Text layoutX="26.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Checking Account"
+         AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0"/>
+   <VBox prefHeight="300.0" prefWidth="450.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="40.0">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Account Number"/>
+      <Label fx:id="ch_acc_num" text="4325 6789"/>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction Limit:"/>
+      <Label fx:id="transaction_limit" text="Label"/>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date Created:"/>
+      <Label fx:id="ch_acc_date" text="2023-12-25"/>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Balance"/>
+      <Label fx:id="ch_acc_bal" text="\$3 000.00"/>
+   </VBox>
+   <Text layoutX="14.0" layoutY="379.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Saving Account"/>
+   <VBox layoutX="21.0" layoutY="398.0" prefHeight="300.0" prefWidth="450.0" AnchorPane.bottomAnchor="60.0"
+         AnchorPane.leftAnchor="14.0">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Account Number"/>
+      <Label fx:id="sv_acc_num" text="4325 6098"/>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Withdrawal Limit:"/>
+      <Label fx:id="withdrawl_limit" text="\$ 10 000.00"/>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date Created:"/>
+      <Label fx:id="sv_acc_date" text="2023-7-07"/>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Balance"/>
+      <Label fx:id="sv_acc_bal" text="\$10 500.00"/>
+   </VBox>
+   <Text layoutX="467.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Move Funds To Savings Account"/>
+   <TextField fx:id="amount_to_sv" layoutX="573.0" layoutY="40.0" prefHeight="26.0" prefWidth="221.0"
+              AnchorPane.rightAnchor="164.0" AnchorPane.topAnchor="72.0"/>
+   <Button fx:id="trans_to_sv_btn" layoutX="617.0" layoutY="110.0" mnemonicParsing="false" prefHeight="26.0"
+           prefWidth="222.0" text="Transfer" AnchorPane.rightAnchor="164.0" AnchorPane.topAnchor="123.0">
+      <graphic>
+         <FontAwesomeIconView fill="WHITE" glyphName="ARROW_DOWN" size="20" strokeType="OUTSIDE" strokeWidth="0.0"
+                              text=""/>
+      </graphic>
+   </Button>
+   <TextField fx:id="amount_to_ch" layoutX="464.0" layoutY="390.0" prefHeight="26.0" prefWidth="221.0"
+              AnchorPane.rightAnchor="164.0" AnchorPane.topAnchor="392.0"/>
+   <Text layoutX="466.0" layoutY="379.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Move Funds To Savings Account"/>
+   <Button fx:id="trans_to_cv_btn" layoutX="464.0" layoutY="438.0" mnemonicParsing="false" prefHeight="26.0"
+           prefWidth="222.0" text="Transfer" AnchorPane.rightAnchor="164.0" AnchorPane.topAnchor="441.0">
+      <graphic>
+         <FontAwesomeIconView fill="WHITE" glyphName="ARROW_UP" size="20" strokeType="OUTSIDE" strokeWidth="0.0"
+                              text=""/>
+      </graphic>
+   </Button>
 </AnchorPane>
