--- a/src/main/resources/Fxml/Client/Client.fxml
+++ b/src/main/resources/Fxml/Client/Client.fxml
@@ -6,8 +6,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="client_parent" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml">
+<BorderPane fx:id="client_parent" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            xmlns:fx="http://javafx.com/fxml/1">
 
     <left>
         <fx:include source="ClientMenu.fxml" />
