--- a/src/main/resources/Fxml/Admin/CreateClient.fxml
+++ b/src/main/resources/Fxml/Admin/CreateClient.fxml
@@ -24,12 +24,12 @@
       <Label fx:id="pAddress_lbl" styleClass="payee_address_lbl"/>
       <Label layoutX="10.0" layoutY="168.0" text="Accounts "/>
       <CheckBox fx:id="ch_acc_box" mnemonicParsing="false" text="Add Checking Account"/>
-      <Label layoutX="10.0" layoutY="189.0" text="CHecking Account Balance:"/>
+      <Label layoutX="10.0" layoutY="189.0" text="Checking Account Balance:"/>
       <TextField fx:id="ch_amount_fld" layoutX="10.0" layoutY="114.0"/>
       <CheckBox fx:id="sv_acc_box" layoutX="10.0" layoutY="205.0" mnemonicParsing="false" text="Add Saving Account"/>
       <Label layoutX="10.0" layoutY="191.0" text="Saving Account Balance:"/>
       <TextField fx:id="sv_amount_fld" layoutX="10.0" layoutY="245.0"/>
-      <Button fx:id="createclient_btn" mnemonicParsing="false" text="Create New Client"/>
+      <Button fx:id="create_client_btn" mnemonicParsing="false" text="Create New Client"/>
       <Label fx:id="error_lbl" layoutX="10.0" layoutY="285.0" styleClass="error_lbl" text="Error:"/>
    </VBox>
 </AnchorPane>
