--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.text.Text?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../Styles/Login.css" xmlns="http://javafx.com/javafx/21"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.LoginController">
    <VBox layoutX="5.0" prefHeight="400.0" prefWidth="200.0" styleClass="login_logo_container">
@@ -42,7 +43,7 @@
       <Label fx:id="payee_address_lbl" text="Payee Address"/>
       <TextField fx:id="payee_address_fld" styleClass="input_field"/>
       <Label fx:id="password_lbl" text="Password"/>
-      <TextField fx:id="password_fld" styleClass="input_field"/>
+      <PasswordField fx:id="password_fld" styleClass="input_field"/>
       <Button fx:id="login_btn" mnemonicParsing="false" text="Login"/>
       <Label fx:id="error_lbl" styleClass="error_label"/>
    </VBox>
